--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-movie</title>
+    <link rel="icon" href="static/movieicon.ico" type="image/x-icon" media="screen">
   </head>
   <body>
     <div id="app"></div>
